@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.08 Not Released
+ - Add support for connection profiles
  - Removed "protocol" from Convos::Core::Connection
  - Removed dependencies from "Settings"
  - Simpler Convos::Core::Settings by removing support for deprecated environment variables
